tests/macro-tests/cases/widget_new/missing_value_before_when1.stderr
error: expected `;`
 --> cases/widget_new/missing_value_before_when1.rs:7:9
  |
7 |         when *#is_pressed {
  |         ^^^^

error[E0061]: this method takes 1 argument but 0 arguments were supplied
  --> cases/widget_new/missing_value_before_when1.rs:6:9
   |
5  |       let _ = Wgt! {
   |  _____________-
6  | |         margin = // missing 0; here
   | |         ^^^^^^
7  | |         when *#is_pressed {
8  | |             margin = 20;
9  | |         }
10 | |     };
   | |_____- argument #1 is missing
   |
note: method defined here
  --> $WORKSPACE/crates/zng-wgt/src/layout_props.rs
   |
   | pub fn margin(child: impl UiNode, margin: impl IntoVar<SideOffsets>) -> impl UiNode {
   |        ^^^^^^
help: provide the argument
  --> $WORKSPACE/crates/zng-wgt/src/wgt.rs
   |
   - #[widget($crate::Wgt)]
   + margin(/* margin */)
   |
